fixed issue with messages
